fix(ui): readded inline height to allow for scrolling beyond limits of visible table

--- a/ui/src/style/components/table-graph.scss
+++ b/ui/src/style/components/table-graph.scss
@@ -33,7 +33,7 @@
   -moz-user-select: text !important;
   -webkit-user-select: text !important;
   line-height: 28px; // Cell height - 2x border width
-  padding: 0 6px 6px;
+  padding: 0 6px;
   font-size: 12px;
   font-weight: 500;
   color: $g12-forge;
